Added Mapstruct for compile time mapping Refactored code to use mapstruct